--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
         <div class="content">
             <h1>ELIJAH NIKAO <span class="black">IGNACIO</span></h1>
             <h4>SR. WORDPRESS DEVELOPER</h4>
-            <div class="divider"></div>
+            <div class="divider">
+                <i class="fa-solid fa-circle"></i>
+                <i class="fa-regular fa-circle"></i>
+            </div>
             <div class="flex border-bottom border-right no-gap">
                 <div>
                     <h3>CONTACT</h3>
